update nuget versions for 2025-01-02

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,10 @@ name: Default Build Workflow
 on:
   workflow_call:
     inputs:
+      dotnet_version:
+        description: 'The version of the .NET SDK; e.g. 9.0.x'
+        required: true
+        type: string
       project_name:
         description: 'The project name; e.g. Trelnex.Users.Api'
         required: true
@@ -32,7 +36,7 @@ jobs:
       - name: setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.x
+          dotnet-version: ${{ inputs.dotnet_version }}
 
       - name: dotnet restore
         run: dotnet restore ${{ inputs.project_name }}/${{ inputs.project_name }}.csproj
