--- a/.github/workflows/ci-cd-users-api.yml
+++ b/.github/workflows/ci-cd-users-api.yml
@@ -25,6 +25,7 @@ jobs:
     uses: ./.github/workflows/build.yml
 
     with:
+      dotnet_version: '9.0.x'
       project_name: 'Trelnex.Users.Api'
 
     secrets: inherit
