--- a/.github/workflows/ci-cd-messages-api.yml
+++ b/.github/workflows/ci-cd-messages-api.yml
@@ -27,6 +27,7 @@ jobs:
     uses: ./.github/workflows/build.yml
 
     with:
+      dotnet_version: '9.0.x'
       project_name: 'Trelnex.Messages.Api'
 
     secrets: inherit
