--- a/Trelnex.Mailboxes.Api/Trelnex.Mailboxes.Api.csproj
+++ b/Trelnex.Mailboxes.Api/Trelnex.Mailboxes.Api.csproj
@@ -1,14 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Trelnex.Mailboxes.Api</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <AzureCosmosDisableNewtonsoftJsonCheck>true</AzureCosmosDisableNewtonsoftJsonCheck>
+    </PropertyGroup>
+
     <ItemGroup>
-        <PackageReference Include="Trelnex.Core.Api" Version="2.0.0"/>
+        <PackageReference Include="Trelnex.Core.Api" Version="3.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
