--- a/Trelnex.Messages.Api/Trelnex.Messages.Api.csproj
+++ b/Trelnex.Messages.Api/Trelnex.Messages.Api.csproj
@@ -1,15 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Trelnex.Messages.Api</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <AzureCosmosDisableNewtonsoftJsonCheck>true</AzureCosmosDisableNewtonsoftJsonCheck>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-        <PackageReference Include="Trelnex.Core.Api" Version="2.0.0"/>
+        <PackageReference Include="Trelnex.Core.Api" Version="3.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
