update trelnex.core.api to 4.0.0

--- a/Trelnex.Groups.Api/appsettings.json
+++ b/Trelnex.Groups.Api/appsettings.json
@@ -10,14 +10,14 @@
       }
     }
   },
-  "CosmosDB": {
+  "CosmosCommandProviders": {
     "TenantId": "FROM_ENV",
     "EndpointUri": "FROM_ENV",
-    "Database": "trelnex-groups",
+    "DatabaseId": "trelnex-groups",
     "Containers": [
       {
         "TypeName": "group",
-        "Container": "groups"
+        "ContainerId": "groups"
       }
     ]
   },
