--- a/Trelnex.Mailboxes.Api/appsettings.json
+++ b/Trelnex.Mailboxes.Api/appsettings.json
@@ -20,22 +20,22 @@
       "Scope": "FROM_ENV"
     }
   },
-  "CosmosDB": {
+  "CosmosCommandProviders": {
     "TenantId": "FROM_ENV",
     "EndpointUri": "FROM_ENV",
-    "Database": "trelnex-mailboxes",
+    "DatabaseId": "trelnex-mailboxes",
     "Containers": [
       {
         "TypeName": "mailbox",
-        "Container": "mailboxes"
+        "ContainerId": "mailboxes"
       },
       {
         "TypeName": "group-mailbox",
-        "Container": "group-mailboxes"
+        "ContainerId": "group-mailboxes"
       },
       {
         "TypeName": "user-mailbox",
-        "Container": "user-mailboxes"
+        "ContainerId": "user-mailboxes"
       }
     ]
   },
