--- a/Trelnex.Messages.Api/appsettings.json
+++ b/Trelnex.Messages.Api/appsettings.json
@@ -16,14 +16,14 @@
       "Scope": "FROM_ENV"
     }
   },
-  "CosmosDB": {
+  "CosmosCommandProviders": {
     "TenantId": "FROM_ENV",
     "EndpointUri": "FROM_ENV",
-    "Database": "trelnex-messages",
+    "DatabaseId": "trelnex-messages",
     "Containers": [
       {
         "TypeName": "message",
-        "Container": "messages"
+        "ContainerId": "messages"
       }
     ]
   },
