--- a/Trelnex.Users.Api/appsettings.json
+++ b/Trelnex.Users.Api/appsettings.json
@@ -10,14 +10,14 @@
       }
     }
   },
-  "CosmosDB": {
+  "CosmosCommandProviders": {
     "TenantId": "FROM_ENV",
     "EndpointUri": "FROM_ENV",
-    "Database": "trelnex-users",
+    "DatabaseId": "trelnex-users",
     "Containers": [
       {
         "TypeName": "user",
-        "Container": "users"
+        "ContainerId": "users"
       }
     ]
   },
