--- a/Trelnex.Integration.Tests/Trelnex.Integration.Tests.csproj
+++ b/Trelnex.Integration.Tests/Trelnex.Integration.Tests.csproj
@@ -36,7 +36,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Trelnex.Core.Data.Emulator" Version="4.1.1" />
+        <PackageReference Include="Trelnex.Core.Api" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
