update to client:3.0.0 and api:6.0.1

--- a/Trelnex.Groups.Api/appsettings.json
+++ b/Trelnex.Groups.Api/appsettings.json
@@ -10,6 +10,9 @@
       }
     }
   },
+  "CredentialFactory": {
+    "Sources": [ "AzureCli" ]
+  },
   "CosmosCommandProviders": {
     "TenantId": "FROM_ENV",
     "EndpointUri": "FROM_ENV",
