--- a/Trelnex.Mailboxes.Api/appsettings.json
+++ b/Trelnex.Mailboxes.Api/appsettings.json
@@ -39,6 +39,9 @@
       }
     ]
   },
+  "CredentialFactory": {
+    "Sources": [ "AzureCli" ]
+  },
   "RewriteRules": [
     {
       "Regex": "^mailboxes-service/(.*)",
