--- a/Trelnex.Messages.Api/appsettings.json
+++ b/Trelnex.Messages.Api/appsettings.json
@@ -16,6 +16,9 @@
       "Scope": "FROM_ENV"
     }
   },
+  "CredentialFactory": {
+    "Sources": [ "AzureCli" ]
+  },
   "CosmosCommandProviders": {
     "TenantId": "FROM_ENV",
     "EndpointUri": "FROM_ENV",
