--- a/Trelnex.Integration.Tests/Trelnex.Integration.Tests.csproj
+++ b/Trelnex.Integration.Tests/Trelnex.Integration.Tests.csproj
@@ -22,8 +22,9 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+        <PackageReference Include="Reqnroll.NUnit" Version="2.2.1" />
         <PackageReference Include="Snapshooter.NUnit" Version="1.0.0" />
-        <PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
+        <!-- <PackageReference Include="SpecFlow.NUnit" Version="3.9.74" /> -->
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
