update appsettings; will be broken under new api is built

--- a/Trelnex.Groups.Api/appsettings.json
+++ b/Trelnex.Groups.Api/appsettings.json
@@ -6,7 +6,8 @@
         "Instance": "https://login.microsoftonline.com/",
         "TenantId": "FROM_ENV",
         "ClientId": "FROM_ENV",
-        "IdentifierURI": "FROM_ENV"
+        "Audience": "FROM_ENV",
+        "Scope": "groups"
       }
     }
   },
