--- a/Trelnex.Groups.Api/appsettings.json
+++ b/Trelnex.Groups.Api/appsettings.json
@@ -7,11 +7,11 @@
         "TenantId": "FROM_ENV",
         "ClientId": "FROM_ENV",
         "Audience": "FROM_ENV",
-        "Scope": "groups"
+        "Scope": "api"
       }
     }
   },
-  "CredentialFactory": {
+  "AzureCredentials": {
     "Sources": [ "AzureCli" ]
   },
   "CosmosCommandProviders": {
