--- a/Trelnex.Mailboxes.Api/appsettings.json
+++ b/Trelnex.Mailboxes.Api/appsettings.json
@@ -7,18 +7,23 @@
         "TenantId": "FROM_ENV",
         "ClientId": "FROM_ENV",
         "Audience": "FROM_ENV",
-        "Scope": "mailboxes"
+        "Scope": "api"
       }
     }
   },
+  "AzureCredentials": {
+    "Sources": [ "AzureCli" ]
+  },
   "Clients": {
     "Groups": {
-      "BaseUri": "FROM_ENV",
-      "Scope": "FROM_ENV"
+      "CredentialProviderName": "AzureCredentialProvider",
+      "Scope": "FROM_ENV",
+      "BaseUri": "FROM_ENV"
     },
     "Users": {
-      "BaseUri": "FROM_ENV",
-      "Scope": "FROM_ENV"
+      "CredentialProviderName": "AzureCredentialProvider",
+      "Scope": "FROM_ENV",
+      "BaseUri": "FROM_ENV"
     }
   },
   "CosmosCommandProviders": {
@@ -39,9 +44,6 @@
         "ContainerId": "user-mailboxes"
       }
     ]
-  },
-  "CredentialFactory": {
-    "Sources": [ "AzureCli" ]
   },
   "RewriteRules": [
     {
