--- a/Trelnex.Messages.Api/appsettings.json
+++ b/Trelnex.Messages.Api/appsettings.json
@@ -7,18 +7,19 @@
         "TenantId": "FROM_ENV",
         "ClientId": "FROM_ENV",
         "Audience": "FROM_ENV",
-        "Scope": "messages"
+        "Scope": "api"
       }
     }
   },
+  "AzureCredentials": {
+    "Sources": [ "AzureCli" ]
+  },
   "Clients": {
     "Mailboxes": {
-      "BaseUri": "FROM_ENV",
-      "Scope": "FROM_ENV"
+      "CredentialProviderName": "AzureCredentialProvider",
+      "Scope": "FROM_ENV",
+      "BaseUri": "FROM_ENV"
     }
-  },
-  "CredentialFactory": {
-    "Sources": [ "AzureCli" ]
   },
   "CosmosCommandProviders": {
     "TenantId": "FROM_ENV",
