--- a/Trelnex.Mailboxes.Api/Trelnex.Mailboxes.Api.csproj
+++ b/Trelnex.Mailboxes.Api/Trelnex.Mailboxes.Api.csproj
@@ -9,7 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="Trelnex.Core.Api" Version="6.0.1" />
+        <PackageReference Include="Trelnex.Core.Api" Version="1.0.0" />
+        <PackageReference Include="Trelnex.Core.Azure" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
