--- a/Trelnex.Messages.Api/appsettings.json
+++ b/Trelnex.Messages.Api/appsettings.json
@@ -1,24 +1,22 @@
 {
   "AllowedHosts": "*",
   "Auth": {
-    "Auth": {
-      "trelnex-api-messages": {
-        "Instance": "https://login.microsoftonline.com/",
-        "TenantId": "FROM_ENV",
-        "ClientId": "FROM_ENV",
-        "Audience": "FROM_ENV",
-        "Scope": "api"
-      }
+    "trelnex-api-messages": {
+      "Instance": "https://login.microsoftonline.com/",
+      "TenantId": "FROM_ENV",
+      "ClientId": "FROM_ENV",
+      "Audience": "FROM_ENV",
+      "Scope": "api"
     }
   },
   "AzureCredentials": {
     "Sources": [ "AzureCli" ]
   },
   "Clients": {
-    "Mailboxes": {
-      "CredentialProviderName": "AzureCredentialProvider",
-      "Scope": "FROM_ENV",
-      "BaseUri": "FROM_ENV"
+    "MailboxesClient": {
+      "CredentialProviderName": "Azure",
+      "BaseAddress": "FROM_ENV",
+      "Scope": "FROM_ENV"
     }
   },
   "CosmosCommandProviders": {
