--- a/Trelnex.Mailboxes.Client/Trelnex.Mailboxes.Client.csproj
+++ b/Trelnex.Mailboxes.Client/Trelnex.Mailboxes.Client.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Trelnex.Client.Common\Trelnex.Client.Common.csproj" />
+        <PackageReference Include="Trelnex.Core" Version="2.0.0" />
     </ItemGroup>
 
 </Project>
