--- a/Trelnex.Messages.Api/appsettings.json
+++ b/Trelnex.Messages.Api/appsettings.json
@@ -1,5 +1,11 @@
 {
   "AllowedHosts": "*",
+  "ServiceConfiguration": {
+    "FullName": "Trelnex.Messages.Api",
+    "DisplayName": "Messages API",
+    "Version": "1.0.0",
+    "Description": "Messages API for Trelnex"
+  },
   "Auth": {
     "trelnex-api-messages": {
       "Instance": "https://login.microsoftonline.com/",
@@ -9,26 +15,44 @@
       "Scope": "api"
     }
   },
-  "AzureCredentials": {
-    "Sources": [ "AzureCli" ]
-  },
   "Clients": {
-    "MailboxesClient": {
-      "CredentialProviderName": "Azure",
+    "UsersClient": {
       "BaseAddress": "FROM_ENV",
-      "Scope": "FROM_ENV"
+      "Authentication": {
+        "CredentialProviderName": "Azure",
+        "Scope": "FROM_ENV"
+      }
     }
   },
-  "CosmosCommandProviders": {
+  "Azure.Credentials": {
+    "Sources": [ "WorkloadIdentity" ]
+  },
+  "Azure.CosmosCommandProviders": {
     "TenantId": "FROM_ENV",
     "EndpointUri": "FROM_ENV",
     "DatabaseId": "trelnex-messages",
-    "Containers": [
-      {
-        "TypeName": "message",
+    "Containers": {
+      "message": {
         "ContainerId": "messages"
       }
-    ]
+    }
+  },
+  "Observability": {
+    "Prometheus": {
+      "Enabled": true
+    },
+    "OpenTelemetry": {
+      "Enabled": true,
+      "ServiceName": "Trelnex.Messages.Api",
+      "ServiceVersion": "1.0.0",
+      "Sources": [ "Trelnex.Messages.Api" ]
+    }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
   },
   "RewriteRules": [
     {
@@ -37,15 +61,6 @@
       "SkipRemainingRules": "true"
     }
   ],
-  "Swagger": {
-    "ServiceName": "Messages"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "Serilog": {
     "Using": [
       "Serilog.Expressions"
