--- a/Trelnex.Users.Api/appsettings.json
+++ b/Trelnex.Users.Api/appsettings.json
@@ -1,5 +1,11 @@
 {
   "AllowedHosts": "*",
+  "ServiceConfiguration": {
+    "FullName": "Trelnex.Users.Api",
+    "DisplayName": "Users API",
+    "Version": "2.0.0",
+    "Description": "Users API for Trelnex"
+  },
   "Auth": {
     "trelnex-api-users": {
       "Instance": "https://login.microsoftonline.com/",
@@ -9,19 +15,32 @@
       "Scope": "api"
     }
   },
-  "AzureCredentials": {
-    "Sources": [ "AzureCli" ]
+  "Azure.Credentials": {
+    "Sources": [ "WorkloadIdentity" ]
   },
-  "CosmosCommandProviders": {
-    "TenantId": "FROM_ENV",
+  "Azure.CosmosCommandProviders": {
     "EndpointUri": "FROM_ENV",
     "DatabaseId": "trelnex-users",
-    "Containers": [
-      {
-        "TypeName": "user",
+    "Containers": {
+      "user": {
         "ContainerId": "users"
       }
-    ]
+    }
+  },
+  "Observability": {
+    "Prometheus": {
+      "Enabled": true
+    },
+    "OpenTelemetry": {
+      "Enabled": true,
+      "Sources": [ "Trelnex.*" ]
+    }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
   },
   "RewriteRules": [
     {
@@ -30,15 +49,6 @@
       "SkipRemainingRules": "true"
     }
   ],
-  "Swagger": {
-    "ServiceName": "Users"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "Serilog": {
     "Using": [
       "Serilog.Expressions"
@@ -47,7 +57,7 @@
       {
         "Name": "ByExcluding",
         "Args": {
-          "expression": "StartsWith(RequestPath, '/healthz') or StartsWith(RequestPath, '/swagger')"
+          "expression": "StartsWith(RequestPath, '/healthz') or StartsWith(RequestPath, '/metrics') or StartsWith(RequestPath, '/swagger')"
         }
       }
     ]
