--- a/Trelnex.Users.Api/Trelnex.Users.Api.csproj
+++ b/Trelnex.Users.Api/Trelnex.Users.Api.csproj
@@ -9,8 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="Trelnex.Core.Api" Version="2.0.0" />
-        <PackageReference Include="Trelnex.Core.Azure" Version="2.0.0" />
+        <PackageReference Include="PostSharp" Version="2025.1.4" />
+        <PackageReference Include="Trelnex.Core.Azure" Version="0.1.0" />
     </ItemGroup>
 
     <ItemGroup>
