--- a/Trelnex.Users.Client/Trelnex.Users.Client.csproj
+++ b/Trelnex.Users.Client/Trelnex.Users.Client.csproj
@@ -8,11 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Trelnex.Core" Version="2.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="8.1.2" />
+        <PackageReference Include="Trelnex.Core" Version="0.1.0" />
     </ItemGroup>
 
 </Project>
