update trelnex nuget packages

--- a/Trelnex.Messages.Api/appsettings.json
+++ b/Trelnex.Messages.Api/appsettings.json
@@ -27,7 +27,7 @@
   "Azure.Credentials": {
     "Sources": [ "WorkloadIdentity" ]
   },
-  "Azure.CosmosCommandProviders": {
+  "Azure.CosmosDataProviders": {
     "TenantId": "FROM_ENV",
     "EndpointUri": "FROM_ENV",
     "DatabaseId": "trelnex-messages",
