--- a/Trelnex.Users.Api/appsettings.json
+++ b/Trelnex.Users.Api/appsettings.json
@@ -18,7 +18,7 @@
   "Azure.Credentials": {
     "Sources": [ "WorkloadIdentity" ]
   },
-  "Azure.CosmosCommandProviders": {
+  "Azure.CosmosDataProviders": {
     "EndpointUri": "FROM_ENV",
     "DatabaseId": "trelnex-users",
     "Containers": {
@@ -29,10 +29,10 @@
   },
   "Observability": {
     "Prometheus": {
-      "Enabled": true
+      "Enabled": false
     },
     "OpenTelemetry": {
-      "Enabled": true,
+      "Enabled": false,
       "Sources": [ "Trelnex.*" ]
     }
   },
